--- a/app/src/main/res/layout/activity_unlock_pin.xml
+++ b/app/src/main/res/layout/activity_unlock_pin.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:padding="32dp"
     android:background="@color/blanco"
-    tools:context=".Login.UnlockPinActivity">
+    tools:context=".Pin.UnlockPinActivity">
 
     <!-- Título -->
     <TextView
