--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -10,6 +10,10 @@
             android:icon="@drawable/ic_settings"
             android:title="Ajustes" />
         <item
+            android:id="@+id/nav_notificaciones"
+            android:icon="@drawable/ic_notificaciones"
+            android:title="Notificaciones" />
+        <item
             android:id="@+id/nav_acerca"
             android:icon="@drawable/ic_info"
             android:title="Acerca de" />
