--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -3,8 +3,14 @@
         android:id="@+id/nav_inicio"
         android:icon="@drawable/ic_home"
         android:title="Inicio" />
+
     <item
         android:id="@+id/nav_mapa"
         android:icon="@drawable/ic_location"
         android:title="Mapa" />
+    <item
+        android:id="@+id/nav_contactos"
+        android:icon="@drawable/ic_contacts"
+        android:title="Contactos" />
+
 </menu>
