--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,23 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
-    app:startDestination="@id/configFragment">
+    android:id="@+id/nav_graph">
 
-    <fragment
-        android:id="@+id/configFragment"
-        android:name="com.example.seguridadciudadana.Configuraciones.ConfigFragment"
-        android:label="ConfigFragment"
-        tools:layout="@layout/fragment_config">
-        <action
-            android:id="@+id/action_configFragment_to_msjSosFragment"
-            app:destination="@id/msjSosFragment" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/msjSosFragment"
-        android:name="com.example.seguridadciudadana.Configuraciones.MsjSosFragment"
-        android:label="MsjFragment"
-        tools:layout="@layout/fragment_msj_sos" />
 </navigation>
 
