--- a/app/src/main/res/layout/fragment_crear_reporte.xml
+++ b/app/src/main/res/layout/fragment_crear_reporte.xml
@@ -89,13 +89,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvUbicacion" />
 
+
     <!-- Descripción opcional (movida aquí) -->
+    <ImageView
+        android:id="@+id/imgPreview"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="92dp"
+        android:background="#BDBDBD"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toEndOf="@id/btnAdjuntar"
+        app:layout_constraintTop_toTopOf="@id/btnAdjuntar" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/descripcionLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="¿Quieres agregar más detalles? (opcional)"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="70dp"
         app:layout_constraintTop_toBottomOf="@id/btnAdjuntar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
